# 4122FinalProject

./: Bullet.cpp  Bullet.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Health.h  Player.cpp  Player.h  README.md  main.cpp  res.qrc  tutorial.pro
ExampleCode/: Bullet.h  Enemy.cpp  Game.cpp  Game1.pro  Health.cpp  Health.h  Score.cpp  mainwindow.cpp
MarioAstroid/: Bullet.cpp  Player.cpp  Player.h  Score.h
build-playerone-Desktop_Qt_5_10_1_clang_64bit-Default/: 6122.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  playerone.cbp
build-playerone-Desktop_Qt_5_10_1_clang_64bit-Default/6122.app/Contents/: Info.plist
build-playerone-Desktop_Qt_5_10_1_clang_64bit-Default/6122_autogen/EWIEGA46WW/: qrc_qml.cpp
build-playerone-Desktop_Qt_5_10_1_clang_64bit-Default/Bullet_autogen/: mocs_compilation.cpp
build-playerone-Desktop_Qt_5_10_1_clang_64bit-Default/Bullet_autogen/EWIEGA46WW/: moc_Enemy.cpp
build-playerone-Desktop_Qt_5_10_1_clang_64bit-Default/playerone_autogen/EWIEGA46WW/: moc_Bullet.cpp  moc_Player.cpp  moc_client.cpp
build-playerone-cmakeRun-Debug/: .qmake.stash  Makefile
build-playerone-cmakeRun-Default/: 6122.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
build-playertwo-Desktop_Qt_5_10_1_GCC_64bit-Debug/: Makefile  moc_Enemy.cpp  moc_Player.cpp  moc_Player2.cpp
build-playertwo-Desktop_Qt_5_10_1_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
build-playertwo-Desktop_Qt_5_10_1_MSVC2017_64bit-Debug/debug/: moc_Bullet.cpp  moc_Enemy.cpp  moc_Player.cpp  moc_Player2.cpp  moc_server.cpp  player2.ilk
build-playertwo-Desktop_Qt_5_10_1_clang_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_Bullet.cpp  moc_server.cpp  playertwo.cbp
build-playertwo-Desktop_Qt_5_10_1_clang_64bit-Debug/Bullet_autogen/EWIEGA46WW/: moc_Bullet.cpp  moc_client.cpp
build-playertwo-Desktop_Qt_5_10_1_clang_64bit-Debug/player2.app/Contents/: Info.plist
build-playertwo-Desktop_Qt_5_10_1_clang_64bit-Debug/playertwo_autogen/: mocs_compilation.cpp
build-playertwo-Desktop_Qt_5_10_1_clang_64bit-Debug/playertwo_autogen/EWIEGA46WW/: moc_Enemy.cpp  moc_Player.cpp  moc_server.cpp
build-playertwo-cmakeRun-Default/: 6122.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
build-tutorial-Desktop_Qt_5_10_1_GCC_64bit-Debug/: Makefile  moc_Bullet.cpp  moc_Enemy.cpp  moc_Player.cpp  moc_Player2.cpp
build-tutorial-Desktop_Qt_5_10_1_clang_64bit-Debug/: Makefile  moc_client.cpp
build-tutorial-Desktop_Qt_5_10_1_clang_64bit-Debug/player1.app/Contents/: Info.plist
playerone/: Bullet.cpp  Bullet.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Health.cpp  Health.h  Player.cpp  Player.h  Player2.cpp  Player2.h  client.cpp  client.h  res.qrc  tutorial.pro  tutorial.pro.user.5839c28  tutorial.pro.user.93e2cf0
playertwo/: Bullet.cpp  CMakeLists.txt  CMakeLists.txt.user.8880157  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Health.cpp  Player.cpp  Player.cpp.autosave  Player.h  Player2.cpp  Player2.h  Score.cpp  client.cpp  client.h  main.cpp  playertwo.pro  playertwo.pro.user.5839c28  playertwo.pro.user.93e2cf0  res.qrc  server.cpp  server.h
